# DuckCommons

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: expr_nesting.rs
src/: arena_set.rs  env.rs  indexed_arena.rs  lazy.rs  lib.rs  logging.rs  macros.rs  ptr.rs  serialize.rs
src/collect/: bitset.rs  compare.rs  macros.rs  mod.rs  orderset.rs  permutations.rs  two_sided.rs  vecmap.rs  vecset.rs
src/collect/bulk/: mod.rs  shift.rs
src/collect/two_sided/: mod.rs  raw.rs
src/math/: counter.rs  index.rs  mod.rs
src/parse/: ascii.rs  mod.rs  text.rs
