[package]
name = "duckcommons-derive"
version = "0.1.0"
description = "Automaticatically derives things in DuckCommons"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "^0.13.7", features = ["extra-traits"] }
quote = "^0.5.2"
regex = "^1"
lazy_static = "^1"
proc-macro2 = { version = "^0.4", features = ["nightly"] }
