[package]
name = "duckcommons-derive"
version = "0.1.0"
description = "Automaticatically derives things in DuckCommons"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "^0.15.6", features = ["full", "extra-traits"] }
quote = "^0.6.8"
regex = "^1"
lazy_static = "^1"
proc-macro2 = { version = "^0.4.19", features = ["nightly"] }
